<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.example.jek20250918.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home">
        <action
                android:id="@+id/action_navigation_home_to_sendMoneyFragment"
                app:destination="@id/sendMoneyFragment"/>
        <action
                android:id="@+id/action_navigation_home_to_bookCarFragment"
                app:destination="@id/bookCarFragment"/>
    </fragment>

    <fragment
            android:id="@+id/navigation_dashboard"
            android:name="com.example.jek20250918.ui.dashboard.DashboardFragment"
            android:label="@string/title_dashboard"
            tools:layout="@layout/fragment_dashboard"/>

    <fragment
            android:id="@+id/navigation_notifications"
            android:name="com.example.jek20250918.ui.notifications.NotificationsFragment"
            android:label="@string/title_notifications"
            tools:layout="@layout/fragment_notifications"/>

    <fragment
            android:id="@+id/sendMoneyFragment"
            android:name="com.example.jek20250918.ui.sendmoney.SendMoneyFragment"
            android:label="@string/send_money"
            tools:layout="@layout/fragment_sendmoney"/>

    <fragment
            android:id="@+id/bookCarFragment"
            android:name="com.example.jek20250918.ui.bookcar.BookCarFragment"
            android:label="@string/book_car"
            tools:layout="@layout/fragment_bookcar"/>
</navigation>